--- a/FastLinksSave/index.html
+++ b/FastLinksSave/index.html
@@ -7,7 +7,10 @@
 
 <body>
   <input type="text" id="ulaz-el"></input>
-  <button id="spasiDugme">SAVE WEBSITE</button>
+  <div id="dugmad">
+    <button id="spasiDugme">SAVE</button>
+    <button id="obrisiDugme">DELETE ALL</button>
+  </div>
 <ul id="ulEl"></ul>
 
   <script src="style.js"></script>
