--- a/FastLinksSave/index.html
+++ b/FastLinksSave/index.html
@@ -8,7 +8,8 @@
 <body>
   <input type="text" id="ulaz-el"></input>
   <div id="dugmad">
-    <button id="spasiDugme">SAVE</button>
+    <button id="spasiDugme">SAVE INPUT</button>
+    <button id="websiteDugme">SAVE WEBSITE</button>
     <button id="obrisiDugme">DELETE ALL</button>
   </div>
 <ul id="ulEl"></ul>
